@@ -33,6 +33,10 @@
 #include <sys/extattr.h>
 #endif
 
+#ifdef SOLARIS
+#include <sys/attr.h>
+#endif
+
 /* FIXME: are the ACL includes really neccessary here ? */
 #ifdef HAVE_SOLARIS_ACLS
 #include <sys/acl.h>
@@ -75,6 +79,11 @@ enum {
 #if !defined(HAVE_SETXATTR)
 #define XATTR_CREATE  0x1       /* set value, fail if attr already exists */
 #define XATTR_REPLACE 0x2       /* set value, fail if attr does not exist */
+#endif
+
+#ifdef SOLARIS
+#define SMB_ATTR_PREFIX "SUNWsmb:"
+#define SMB_ATTR_PREFIX_LEN (sizeof (SMB_ATTR_PREFIX) - 1)
 #endif
 
 /* Names for our Extended Attributes adouble data */
