@@ -20,6 +20,8 @@ Changes in 3.1.9
        an alternate install prefix for tracker when cross-compiling.
 * UPD: asip-status.pl: IPv6 support
 * FIX: afpd: don't use network IDs without LDAP, bug #621
+* NEW: AFP clients should not be able to copy or manipulate special
+       extended attributes set by NFS and SMB servers on Solaris.
 
 Changes in 3.1.8
 ================
